--- a/index.html
+++ b/index.html
@@ -1039,6 +1039,14 @@
 
 
   
+    
+  
+
+
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/https:/doi.org/10.1016/j.foodchem.2020.128473" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -1054,7 +1062,9 @@
 
 
 
-
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.3389/fpls.2021.657578" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
