--- a/home/index.html
+++ b/home/index.html
@@ -1012,10 +1012,21 @@
 
 
   
+    
+  
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/fpls-12-657578.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
+
+
+<button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
+        data-filename="/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/cite.bib">
+  Cite
+</button>
 
 
 
@@ -1122,8 +1133,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/foodchem2021_predicting%20micronutrients.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
