--- a/publication/index.html
+++ b/publication/index.html
@@ -736,10 +736,21 @@
 
 
   
+    
+  
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/fpls-12-657578.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
+
+
+<button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
+        data-filename="/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/cite.bib">
+  Cite
+</button>
 
 
 
@@ -808,8 +819,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/foodchem2021_predicting%20micronutrients.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -1150,7 +1167,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/https:/link.springer.com/content/pdf/10.1186/s12870-018-1422-2.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/Twin%20embryo%20in%20maize/Twin%20embryo%20Liu_et_al-2018-BMC_Plant_Biology.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -1218,7 +1235,7 @@
       Shaojiang Chen (陈绍江)</span>
   </span>
   (2015).
-  <a href="/publication/qhir8-mapping/">qhir8 affects HIR in maize</a>.
+  <a href="/publication/fine-mapping-of-qhir8-in-maize/">Fine Mapping of qhir8 in Maize</a>.
   <em>Theor Appl Genet, 128</em>(12).
   
   <p>
@@ -1236,14 +1253,14 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/https:/link.springer.com/article/10.1007/s00122-015-2605-y" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/fine-mapping-of-qhir8-in-maize/fine_mapping_of_qhir8.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/qhir8-mapping/cite.bib">
+        data-filename="/publication/fine-mapping-of-qhir8-in-maize/cite.bib">
   Cite
 </button>
 
