--- a/index.html
+++ b/index.html
@@ -2100,7 +2100,15 @@
     <div class="container">
       <footer class="site-footer">
   
-
+  
+	<script src="https://utteranc.es/client.js"
+	repo="wellionx/wellion.rbind.io/"
+	issue-term="title"
+	theme="github-light"
+	crossorigin="anonymous"
+	async>
+	</script> 
+	
   <p class="powered-by">
     Wei Li ©2021
   </p>
