--- a/courses/example/example1/index.html
+++ b/courses/example/example1/index.html
@@ -744,7 +744,15 @@ Tip 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
 
       <footer class="site-footer">
   
-
+  
+	<script src="https://utteranc.es/client.js"
+	repo="wellionx/wellion.rbind.io/"
+	issue-term="title"
+	theme="github-light"
+	crossorigin="anonymous"
+	async>
+	</script> 
+	
   <p class="powered-by">
     Wei Li ©2021
   </p>
