--- a/courses/example/example1/index.html
+++ b/courses/example/example1/index.html
@@ -746,7 +746,7 @@ Tip 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
   
   
 	<script src="https://utteranc.es/client.js"
-	repo="wellionx/wellion.rbind.io/"
+	repo="wellionx/we5"
 	issue-term="title"
 	theme="github-light"
 	crossorigin="anonymous"
