--- a/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/index.html
+++ b/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/index.html
@@ -1144,7 +1144,7 @@
   
   
 	<script src="https://utteranc.es/client.js"
-	repo="wellionx/wellion.rbind.io/"
+	repo="wellionx/we5"
 	issue-term="title"
 	theme="github-light"
 	crossorigin="anonymous"
