--- a/publication/qtl-mapping-and-prediction-of-haploid-male-fertility-traits-in-maize/index.html
+++ b/publication/qtl-mapping-and-prediction-of-haploid-male-fertility-traits-in-maize/index.html
@@ -1107,6 +1107,10 @@
 
 
 
+<section id="comments">
+  
+</section>
+
 
 
 
@@ -1146,14 +1150,6 @@
     <div class="container">
       <footer class="site-footer">
   
-  
-	<script src="https://utteranc.es/client.js"
-	repo="wellionx/we5"
-	issue-term="title"
-	theme="github-light"
-	crossorigin="anonymous"
-	async>
-	</script> 
 	
   <p class="powered-by">
     Wei Li ©2021
