--- a/courses/example/index.html
+++ b/courses/example/index.html
@@ -735,6 +735,10 @@
           
 
 
+<section id="comments">
+  
+</section>
+
 
 
           
@@ -748,14 +752,6 @@
 
       <footer class="site-footer">
   
-  
-	<script src="https://utteranc.es/client.js"
-	repo="wellionx/we5"
-	issue-term="title"
-	theme="github-light"
-	crossorigin="anonymous"
-	async>
-	</script> 
 	
   <p class="powered-by">
     Wei Li ©2021
