--- a/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/index.html
+++ b/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/index.html
@@ -1128,6 +1128,10 @@
 
 
 
+<section id="comments">
+  
+</section>
+
 
 
 
@@ -1163,14 +1167,6 @@
     <div class="container">
       <footer class="site-footer">
   
-  
-	<script src="https://utteranc.es/client.js"
-	repo="wellionx/we5"
-	issue-term="title"
-	theme="github-light"
-	crossorigin="anonymous"
-	async>
-	</script> 
 	
   <p class="powered-by">
     Wei Li ©2021
