--- a/publication/fine-mapping-of-qhir8-in-maize/index.html
+++ b/publication/fine-mapping-of-qhir8-in-maize/index.html
@@ -1128,6 +1128,10 @@
 
 
 
+<section id="comments">
+  
+</section>
+
 
 
 
@@ -1167,14 +1171,6 @@
     <div class="container">
       <footer class="site-footer">
   
-  
-	<script src="https://utteranc.es/client.js"
-	repo="wellionx/we5"
-	issue-term="title"
-	theme="github-light"
-	crossorigin="anonymous"
-	async>
-	</script> 
 	
   <p class="powered-by">
     Wei Li ©2021
