--- a/talk/example/index.html
+++ b/talk/example/index.html
@@ -1061,6 +1061,10 @@
 
 
 
+<section id="comments">
+  
+</section>
+
 
 
 
@@ -1085,14 +1089,6 @@
     <div class="container">
       <footer class="site-footer">
   
-  
-	<script src="https://utteranc.es/client.js"
-	repo="wellionx/we5"
-	issue-term="title"
-	theme="github-light"
-	crossorigin="anonymous"
-	async>
-	</script> 
 	
   <p class="powered-by">
     Wei Li ©2021
