--- a/talk/example/index.html
+++ b/talk/example/index.html
@@ -1066,6 +1066,15 @@
 </section>
 
 
+<script src="https://utteranc.es/client.js"
+repo="wellionx/we5"
+issue-term="title"
+theme="github-light"
+crossorigin="anonymous"
+async>
+</script> 
+
+
 
 
 
