--- a/home/index.html
+++ b/home/index.html
@@ -764,7 +764,7 @@
     
     <h1>Biography</h1>
 
-    <p>Wei Li completed his PhD degree in crop science at China Agricultural University. His main research interest is genetics of maize doubled haploid related traits. Meanwhile, he used machine learning techniques to identify haploid seeds with NIR spectroscopy. Now he is working on precision agriculture, which is using machine learning and crop model to make decisions on farming. High throughput phenotyping is also involved in his research topics.</p>
+    <p>Wei Li has developed his PhD degree in crop science at China Agricultural University. His main research interest is genetics of maize doubled haploid related traits. Meanwhile, machine learning techniques was used to identify haploid seeds with NIR spectroscopy. Now he is working on precision agriculture, which is using machine learning and crop growth models to make decisions on farming. High throughput phenotyping is also involved in his research topics.</p>
 
 
     <div class="row">
@@ -1017,7 +1017,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/fpls-12-657578.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/https:/www.jianguoyun.com/p/DTYDve0Qus60CRi8p-4D" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -1138,7 +1138,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/foodchem2021_predicting%20micronutrients.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/https:/www.jianguoyun.com/p/DSx-DGkQus60CRjPp-4D" target="_blank" rel="noopener">
   PDF
 </a>
 
