--- a/publication/cloning-of-zmdmp/index.html
+++ b/publication/cloning-of-zmdmp/index.html
@@ -1082,7 +1082,7 @@
     <div class="media-body">
       <h5 class="card-title">Wei Li (李伟)</h5>
       <h6 class="card-subtitle">PostDoc of Crop Science</h6>
-      <p class="card-text">My research interests include genetics of maize physiology traits, High throughput phenotyping for physiology and nutrient traits.</p>
+      <p class="card-text">My research interests include high throughput phenotyping for physiology and grain nutrient traits, genetics of maize physiology traits.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
@@ -1195,7 +1195,7 @@
 
 
 <script src="https://utteranc.es/client.js"
-repo="wellionx/we5"
+repo="[wellionx/we5]"
 issue-term="title"
 theme="github-light"
 crossorigin="anonymous"
