--- a/publication/index.html
+++ b/publication/index.html
@@ -748,7 +748,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/fpls-12-657578.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/https:/www.jianguoyun.com/p/DTYDve0Qus60CRi8p-4D" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -831,7 +831,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/foodchem2021_predicting%20micronutrients.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/https:/www.jianguoyun.com/p/DSx-DGkQus60CRjPp-4D" target="_blank" rel="noopener">
   PDF
 </a>
 
