--- a/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/index.html
+++ b/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/index.html
@@ -757,7 +757,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/foodchem2021_predicting%20micronutrients.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="/https:/www.jianguoyun.com/p/DSx-DGkQus60CRjPp-4D" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -795,7 +795,7 @@
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 835px;">
   <div style="position: relative">
     <img src="/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/featured_hu3e80af7c5e9e5b4cf426403eac80e14f_1318202_720x0_resize_q75_lanczos.jpg" alt="" class="featured-image">
-    <span class="article-header-caption">Image credit by Wei Li</span>
+    <span class="article-header-caption">Image credit by Hu, Naiyue</span>
   </div>
 </div>
 
@@ -988,7 +988,7 @@
     <div class="media-body">
       <h5 class="card-title">Wei Li (李伟)</h5>
       <h6 class="card-subtitle">PostDoc of Crop Science</h6>
-      <p class="card-text">My research interests include genetics of maize physiology traits, High throughput phenotyping for physiology and nutrient traits.</p>
+      <p class="card-text">My research interests include high throughput phenotyping for physiology and grain nutrient traits, genetics of maize physiology traits.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
@@ -1113,7 +1113,7 @@
 
 
 <script src="https://utteranc.es/client.js"
-repo="wellionx/we5"
+repo="[wellionx/we5]"
 issue-term="title"
 theme="github-light"
 crossorigin="anonymous"
