--- a/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/index.html
+++ b/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/index.html
@@ -760,7 +760,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/fpls-12-657578.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="/https:/www.jianguoyun.com/p/DTYDve0Qus60CRi8p-4D" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -985,7 +985,7 @@
     <div class="media-body">
       <h5 class="card-title">Wei Li (李伟)</h5>
       <h6 class="card-subtitle">PostDoc of Crop Science</h6>
-      <p class="card-text">My research interests include genetics of maize physiology traits, High throughput phenotyping for physiology and nutrient traits.</p>
+      <p class="card-text">My research interests include high throughput phenotyping for physiology and grain nutrient traits, genetics of maize physiology traits.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
@@ -1134,7 +1134,7 @@
 
 
 <script src="https://utteranc.es/client.js"
-repo="wellionx/we5"
+repo="[wellionx/we5]"
 issue-term="title"
 theme="github-light"
 crossorigin="anonymous"
