--- a/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/index.html
+++ b/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/index.html
@@ -760,7 +760,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="/https:/www.jianguoyun.com/p/DTYDve0Qus60CRi8p-4D" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/2021-03-24-spectroscopic-estimation-of-n-remobilization/fpls-12-657578.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
