--- a/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/index.html
+++ b/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/index.html
@@ -757,7 +757,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="/https:/www.jianguoyun.com/p/DSx-DGkQus60CRjPp-4D" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/predicting-micronutrients-of-wheat-using-hyperspectral-imaging/foodchem2021_predicting%20micronutrients.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
