--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
     
     <h1>Biography</h1>
 
-    <p>Wei Li has developed his PhD degree in crop science at China Agricultural University. His main research interest is genetics of maize doubled haploid related traits. Meanwhile, machine learning techniques was used to identify haploid seeds with NIR spectroscopy. Now he is working on precision agriculture, which is using machine learning and crop growth models to make decisions on farming. High throughput phenotyping is also involved in his research topics.</p>
+    <p>Wei Li has developed his PhD degree in crop science at China Agricultural University. His main research interest is genetics of maize doubled haploid related traits. Meanwhile, machine learning technique was used to identify haploid seeds with NIR spectroscopy. Now he is working on precision agriculture, which is using machine learning and crop growth models to make decisions on smart farming. High throughput phenotyping is also involved in his research topics.</p>
 
 
     <div class="row">
@@ -819,7 +819,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">PhD in Crop Science, 2012 - 2017</p>
+              <p class="course">PhD in Crop Genetics and breeding, 2012 - 2017</p>
               <p class="institution">China Agricultural University</p>
             </div>
           </li>
@@ -827,7 +827,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">MS in Crop Genetics and breeding, 2010 - 2012</p>
+              <p class="course">MS in Crop Science, 2010 - 2012</p>
               <p class="institution">China Agricultural University</p>
             </div>
           </li>
@@ -835,7 +835,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">BSc in Agronomy, 2006 - 2010</p>
+              <p class="course">BS in Agronomy, 2006 - 2010</p>
               <p class="institution">Shandong Agricultural University</p>
             </div>
           </li>
@@ -2100,7 +2100,7 @@
     <div class="container">
       <footer class="site-footer">
   
-	
+
   <p class="powered-by">
     Wei Li ©2021
   </p>
